// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinearGenomeView /> renders one track, one region 1`] = `
<div
  class="makeStyles-root"
>
  <div
    class="makeStyles-linearGenomeView"
    style="display: grid; position: relative; grid-template-rows: [header] auto [scale-bar] 40px [track-foo] 20px [resize-foo] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis"
      >
        <p
          class="MuiTypography-root makeStyles-viewName MuiTypography-body1"
          style="color: rgb(255, 255, 255);"
        />
      </div>
      <div
        class="makeStyles-spacer"
      />
      <div
        class="MuiPaper-root makeStyles-searchRoot MuiPaper-elevation1 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        aria-expanded="false"
        class="MuiAutocomplete-root"
        role="combobox"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-headerRefName"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            style="padding-top: 2px; padding-bottom: 2px;"
          >
            <input
              aria-autocomplete="list"
              aria-invalid="false"
              autocapitalize="none"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
              id="refNameAutocomplete-lgv"
              spellcheck="false"
              type="text"
              value="ctgA"
            />
            <div
              class="MuiAutocomplete-endAdornment"
            >
              <button
                aria-label="Open"
                class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                tabindex="-1"
                title="Open"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-container"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
          data-testid="zoom_out"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
            style="left: 0%; width: 0%;"
          />
          <input
            type="hidden"
            value="3.321928094887362"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="3.321928094887362"
            aria-valuenow="3.321928094887362"
            class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
            data-index="0"
            role="slider"
            style="left: 0%;"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer"
      />
    </div>
    <div
      class="makeStyles-controls makeStyles-viewControls"
      style="grid-row: scale-bar;"
    />
    <div
      class="makeStyles-rubberBandContainer"
      data-testid="rubberband_container"
      role="presentation"
      style="height: 40px;"
    >
      <div
        class="makeStyles-scaleBarContainer"
      >
        <div
          class="makeStyles-scaleBar"
          style="left: 0px; width: 100px; height: 40px;"
        >
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <svg
              height="40"
              width="100"
            >
              <line
                class="makeStyles-majorTick"
                data-bp="-1"
                stroke="#555"
                stroke-width="1"
                x1="-1"
                x2="-1"
                y1="0"
                y2="6"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="19"
                stroke="#999"
                stroke-width="1"
                x1="19"
                x2="19"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="39"
                stroke="#999"
                stroke-width="1"
                x1="39"
                x2="39"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="59"
                stroke="#999"
                stroke-width="1"
                x1="59"
                x2="59"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="79"
                stroke="#999"
                stroke-width="1"
                x1="79"
                x2="79"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-majorTick"
                data-bp="99"
                stroke="#555"
                stroke-width="1"
                x1="99"
                x2="99"
                y1="0"
                y2="6"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="119"
                stroke="#999"
                stroke-width="1"
                x1="119"
                x2="119"
                y1="0"
                y2="4"
              />
              <text
                class="makeStyles-majorTickLabel"
                dominant-baseline="hanging"
                style="font-size: 11px;"
                x="-4"
                y="7"
              >
                0
              </text>
              <text
                class="makeStyles-majorTickLabel"
                dominant-baseline="hanging"
                style="font-size: 11px;"
                x="96"
                y="7"
              >
                100
              </text>
            </svg>
          </div>
        </div>
        <div
          class="makeStyles-refLabel"
          data-testid="refLabel-ctgA"
          style="left: 0px; z-index: 0;"
        >
          ctgA
        </div>
      </div>
    </div>
    <div
      class="makeStyles-controls makeStyles-trackControls"
      data-testid="trackControls-lgv-testConfig"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton MuiToggleButton-sizeSmall"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            style="color: rgb(19, 85, 96);"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
          data-testid="dragHandle-lgv-testConfig"
          draggable="true"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          >
            drag_indicator
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
          >
            Foo Track
          </p>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-trackDescription MuiTypography-body2 MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="makeStyles-trackRenderingContainer"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style="position: fixed; z-index: 2;"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          draggable="true"
        >
          drag_indicator
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              close
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Foo Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              more_vert
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-track"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="makeStyles-trackBlocks"
          data-testid="Block"
          style="left: 0px;"
        >
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <div
              class="ssr-container"
              data-html-size="313"
            >
              <div
                classname="ssr-container-inner"
              >
                <div
                  class="PileupRendering"
                  style="position:relative;width:0;height:0"
                >
                  <canvas
                    data-testid="prerendered_canvas"
                    height="0"
                    style="width:0;height:0;position:absolute;left:0;top:0"
                    width="0"
                  />
                  <canvas
                    class="highlightOverlayCanvas"
                    height="0"
                    style="position:absolute;left:0;top:0"
                    width="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-horizontalHandle"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2; background: rgb(204, 204, 204); box-sizing: border-box; border-top: 1px solid #fafafa;"
    />
  </div>
</div>
`;

exports[`<LinearGenomeView /> renders setup wizard 1`] = `
<div
  class="makeStyles-root"
>
  <div
    class="makeStyles-linearGenomeView"
  >
    <div
      style="height: 40px;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiContainer-root makeStyles-importFormContainer MuiContainer-maxWidthLg"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiFormControl-root MuiTextField-root makeStyles-importFormEntry MuiFormControl-marginNormal"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
            >
              Assembly
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby=" "
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                role="button"
                tabindex="0"
              >
                volMyt1
              </div>
              <input
                type="hidden"
                value="0"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            >
              Select assembly to view
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            aria-expanded="false"
            class="MuiAutocomplete-root"
            role="combobox"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-importFormEntry MuiFormControl-marginNormal"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                data-shrink="true"
                for="refNameAutocomplete-lgv"
                id="refNameAutocomplete-lgv-label"
              >
                Sequence
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="refNameAutocomplete-lgv-helper-text"
                  aria-invalid="false"
                  autocapitalize="none"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="refNameAutocomplete-lgv"
                  spellcheck="false"
                  type="text"
                  value="ctgA"
                />
                <div
                  class="MuiAutocomplete-endAdornment"
                >
                  <button
                    aria-label="Open"
                    class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                    tabindex="-1"
                    title="Open"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
                id="refNameAutocomplete-lgv-helper-text"
              >
                Select sequence to view
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Open
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LinearGenomeView /> renders two tracks, two regions 1`] = `
<div
  class="makeStyles-root"
>
  <div
    class="makeStyles-linearGenomeView"
    style="display: grid; position: relative; grid-template-rows: [header] auto [scale-bar] 40px [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis"
      >
        <p
          class="MuiTypography-root makeStyles-viewName MuiTypography-body1"
          style="color: rgb(255, 255, 255);"
        />
      </div>
      <div
        class="makeStyles-spacer"
      />
      <div
        class="MuiPaper-root makeStyles-searchRoot MuiPaper-elevation1 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        aria-expanded="false"
        class="MuiAutocomplete-root"
        role="combobox"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-headerRefName"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            style="padding-top: 2px; padding-bottom: 2px;"
          >
            <input
              aria-autocomplete="list"
              aria-invalid="false"
              autocapitalize="none"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
              id="refNameAutocomplete-lgv"
              spellcheck="false"
              type="text"
              value="ctgA"
            />
            <div
              class="MuiAutocomplete-endAdornment"
            >
              <button
                aria-label="Open"
                class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                tabindex="-1"
                title="Open"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-container"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
          data-testid="zoom_out"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer"
      />
    </div>
    <div
      class="makeStyles-controls makeStyles-viewControls"
      style="grid-row: scale-bar;"
    />
    <div
      class="makeStyles-rubberBandContainer"
      data-testid="rubberband_container"
      role="presentation"
      style="height: 40px;"
    >
      <div
        class="makeStyles-scaleBarContainer"
      >
        <div
          class="makeStyles-scaleBar"
          style="left: 0px; width: 102px; height: 40px;"
        >
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <svg
              height="40"
              width="100"
            >
              <line
                class="makeStyles-majorTick"
                data-bp="-1"
                stroke="#555"
                stroke-width="1"
                x1="-1"
                x2="-1"
                y1="0"
                y2="6"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="19"
                stroke="#999"
                stroke-width="1"
                x1="19"
                x2="19"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="39"
                stroke="#999"
                stroke-width="1"
                x1="39"
                x2="39"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="59"
                stroke="#999"
                stroke-width="1"
                x1="59"
                x2="59"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="79"
                stroke="#999"
                stroke-width="1"
                x1="79"
                x2="79"
                y1="0"
                y2="4"
              />
              <line
                class="makeStyles-majorTick"
                data-bp="99"
                stroke="#555"
                stroke-width="1"
                x1="99"
                x2="99"
                y1="0"
                y2="6"
              />
              <line
                class="makeStyles-minorTick"
                data-bp="119"
                stroke="#999"
                stroke-width="1"
                x1="119"
                x2="119"
                y1="0"
                y2="4"
              />
              <text
                class="makeStyles-majorTickLabel"
                dominant-baseline="hanging"
                style="font-size: 11px;"
                x="-4"
                y="7"
              >
                0
              </text>
              <text
                class="makeStyles-majorTickLabel"
                dominant-baseline="hanging"
                style="font-size: 11px;"
                x="96"
                y="7"
              >
                100
              </text>
            </svg>
          </div>
          <div
            class="makeStyles-interRegionPaddingBlock"
            style="width: 2px;"
          />
        </div>
        <div
          class="makeStyles-refLabel"
          data-testid="refLabel-ctgA"
          style="left: 0px; z-index: 0;"
        >
          ctgA
        </div>
      </div>
    </div>
    <div
      class="makeStyles-controls makeStyles-trackControls"
      data-testid="trackControls-lgv-testConfig"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton MuiToggleButton-sizeSmall"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            style="color: rgb(19, 85, 96);"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
          data-testid="dragHandle-lgv-testConfig"
          draggable="true"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          >
            drag_indicator
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
          >
            Foo Track
          </p>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-trackDescription MuiTypography-body2 MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="makeStyles-trackRenderingContainer"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style="position: fixed; z-index: 2;"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          draggable="true"
        >
          drag_indicator
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              close
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Foo Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              more_vert
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-track"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="makeStyles-trackBlocks"
          data-testid="Block"
          style="left: 0px;"
        >
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <div
              class="ssr-container"
              data-html-size="313"
            >
              <div
                classname="ssr-container-inner"
              >
                <div
                  class="PileupRendering"
                  style="position:relative;width:0;height:0"
                >
                  <canvas
                    data-testid="prerendered_canvas"
                    height="0"
                    style="width:0;height:0;position:absolute;left:0;top:0"
                    width="0"
                  />
                  <canvas
                    class="highlightOverlayCanvas"
                    height="0"
                    style="position:absolute;left:0;top:0"
                    width="0"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-interRegionPaddingBlock"
            style="width: 2px;"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-horizontalHandle"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2; background: rgb(204, 204, 204); box-sizing: border-box; border-top: 1px solid #fafafa;"
    />
    <div
      class="makeStyles-controls makeStyles-trackControls"
      data-testid="trackControls-lgv-testConfig2"
      style="grid-row: track-bar; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton MuiToggleButton-sizeSmall"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            style="color: rgb(19, 85, 96);"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
          data-testid="dragHandle-lgv-testConfig2"
          draggable="true"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          >
            drag_indicator
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
          >
            Bar Track
          </p>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-trackDescription MuiTypography-body2 MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="makeStyles-trackRenderingContainer"
      role="presentation"
      style="grid-row: track-bar; grid-column: blocks;"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style="position: fixed; z-index: 2;"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          draggable="true"
        >
          drag_indicator
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              close
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Bar Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              more_vert
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-track"
        data-testid="track-testConfig2"
        role="presentation"
      >
        <div
          class="makeStyles-trackBlocks"
          data-testid="Block"
          style="left: 0px;"
        >
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <div
              class="ssr-container"
              data-html-size="313"
            >
              <div
                classname="ssr-container-inner"
              >
                <div
                  class="PileupRendering"
                  style="position:relative;width:0;height:0"
                >
                  <canvas
                    data-testid="prerendered_canvas"
                    height="0"
                    style="width:0;height:0;position:absolute;left:0;top:0"
                    width="0"
                  />
                  <canvas
                    class="highlightOverlayCanvas"
                    height="0"
                    style="position:absolute;left:0;top:0"
                    width="0"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-interRegionPaddingBlock"
            style="width: 2px;"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-horizontalHandle"
      role="presentation"
      style="grid-row: resize-bar; grid-column: span 2; background: rgb(204, 204, 204); box-sizing: border-box; border-top: 1px solid #fafafa;"
    />
  </div>
</div>
`;
